Eliminate InstanceIdentifier.hashCode()
Do not memoize InstanceIdentifier.hashCode(), allowing the
implementation to reside in AbstractDataObjectReference.

JIRA: YANGTOOLS-1577
Change-Id: I6ddc7a274195ca4e904c14cb8bbc77f5f609f792
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>